@@ -3,6 +3,7 @@
 --------------------------------------------------------------------------------
  
  * support for roof shapes (as ridge/edge geometry or building tags)
+ * support for building parts
  * allow replacing POVRay textures in osm2world_definitions.inc
  * make elevation calculator configurable, default to ZeroElevationCalculator
  * bugfix in ForceEC. (duplicate points with ele) solves missing walls in POVRay
